--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rosewrightdev-v3",
+  "name": "rw-3d",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,16 +10,15 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^2.2.1",
-    "@splinetool/runtime": "^0.9.87",
+    "@splinetool/runtime": "^0.9.88",
+    "autoprefixer": "^10.4.8",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.7"
   }
 }
