--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splinetool/runtime": "^0.9.88",
     "autoprefixer": "^10.4.8",
     "next": "12.2.3",
+    "next-videos": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
